# myapi-portfolio

./: pyproject.toml  requirements.txt
app/: .env  actions.py  config.py  db.py  main.py  models.py  schemas.py
