[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["misshhok <mishasmirnov03@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
SQLAlchemy = "^1.4.32"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.17.6"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.941"
sqlalchemy-stubs = "^0.4"
flake8 = "^4.0.1"
autoflake = "^1.4"
isort = "^5.10.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
